--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ APScheduler==3.10.4
 python-socketio==5.11.0
 python-engineio==4.8.0
 gunicorn==21.2.0
-eventlet==0.33.3
+gevent==24.2.1
+gevent-websocket==0.10.1
